# certwarden-deploy

./: .gitignore  .gitlab-ci.yml  .markdownlint.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  config.yaml  go.mod  go.sum  main.go  renovate.json  taskfile.yaml
.forgejo/workflows/: docs-deploy.yml  test.yml
.github/workflows/: docs-deploy.yml  test.yml
.gitlab/: renovate.json
.woodpecker/: build-and-deploy.yml  deploy-docs.yml
cmd/certwarden-deploy/: e2e_test.go  main.go  root.go
docs/: .gitignore  LICENSE  README.md  config.toml  go.mod  go.sum  hugo.toml  mkdocs.yml  pyproject.toml
docs/content/: _index.md  configuration.md  installation.md  license.md
docs/content/docs/configuration/: _index.md
docs/content/docs/introduction/: _index.md
docs/docs/: configuration.md  index.md  installation.md  license.md
docs/layouts/partials/: heading-post.html  logo.html
examples/: certwarden-deploy.service  certwarden-deploy.timer  config.yaml
helper_scripts/: arch_from_goarch.sh
internal/certificates/: certificates.go  certificates_test.go  errors.go  models.go
internal/cli/: root.go
internal/config/: config.go  models.go
internal/configuration/: config.go  config_test.go  models.go  substitutions.go  substitutions_test.go  validation.go  validation_test.go
internal/constants/: constants.go
internal/errlog/: sentry.go
internal/init/: init.go
internal/logger/: logger.go
