[project]
name = "certwarden-deploy-docs"
version = "0.1.0"
description = "Docs for certwarden-deploy, access it at https://certwarden-deploy.lila.network"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-material>=9.7.6",
    "pygments>=2.20.0",
]
